--- a/client/src/pages/Login.css
+++ b/client/src/pages/Login.css
@@ -51,9 +51,9 @@ input {
     transition: all .5s
 } */
 
-footer p {
+/* footer p {
     margin: 0;
     font-size: .9rem;
     text-align: center;
 
-}
+} */
