--- a/client/src/components/CharacterCard/styles.css
+++ b/client/src/components/CharacterCard/styles.css
@@ -15,12 +15,13 @@
 .scoreSet {
     list-style-type: none;
     padding-inline-start: 0px;
+    margin-top: 2vh;
     text-align: left
 }
 
 .scoreSet li {
     font-family: ballinger-mono-light, monospace;
-    margin-top: 2vh;
+    
     text-align: left;
 
 }
@@ -28,4 +29,9 @@
 .character-container {
     border: 1px solid #333;
     margin-bottom: 6vh;
+}
+.css-1j6qxbk {
+    width: 100% !important;
+    padding: 0px !important;
+    margin: 0px !important;
 }
